--- a/ALPHA-DGS/Views/MagazijnPartijs/_MagazijnPartijModelPartial.cshtml
+++ b/ALPHA-DGS/Views/MagazijnPartijs/_MagazijnPartijModelPartial.cshtml
@@ -18,7 +18,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="addMagazijnPartijLabel">  Voeg Partijserie LOL</h4>
+                <h4 class="modal-title" id="addMagazijnPartijLabel">  Voeg Partijserie</h4>
                 <button type="button" class="close" data-dismiss="modal">
                     <span>x</span>
                 </button>
