--- a/ALPHA-DGS/Views/User/Index.cshtml
+++ b/ALPHA-DGS/Views/User/Index.cshtml
@@ -41,7 +41,7 @@
                                         </a>
 
                                         <a asp-action="ManageUserClaims" asp-route-userId="@item.Id" class="btn btn-primary text-white"
-                                           style="cursor:pointer">Claims</a>
+                                           style="cursor:pointer">Rechten</a>
 
                                         <button type="submit" onclick="return confirm('Are you sure you want to delete this?')"
                                                 class="btn btn-danger">
