--- a/ALPHA-DGS/Views/Home/Index.cshtml
+++ b/ALPHA-DGS/Views/Home/Index.cshtml
@@ -4,58 +4,28 @@
     Hallo welkom naar DGS Magazijn Webapp - Dylaan Omer
 </p4>
 
-<p3>TEST SYNC GITHUB (afgescheiden van devops)</p3>
+<br /></br>
+
+<p3>Welkom naar de live build (GEBRUIKER)</p3>
 
 <br /> </br>
 <br /> </br>
 <br /> </br>
 
 
-<button type="button" id="btnShowModal" class="btn btn-primary button button4">
-    Show
-</button>
-<div class="container">
-    <div class="modal fade" tabindex="-1" id="loginModal"
-         data-keyboard="false" data-backdrop="static">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        ×
-                    </button>
-                    <h4 class="modal-title">Login</h4>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text"
-                                   placeholder="Login Username" id="inputUserName" />
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" placeholder="Login Password"
-                                   type="password" id="inputPassword" />
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary button button4">Sign</button>
-                    <button type="button" id="btnHideModal" class="btn btn-primary button button4">
-                        Hide
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<p>Als u niet bent aangemeld ga aub via de Aanmeld knop hier onder of via rechtsboven Aanmelden</p>
 
-<body>
-    <form id="form1" runat="server">
-        <div>
-            Textbox with virtual key pad
-            <asp:TextBox ID="keyboard" runat="server" MaxLength="4"></asp:TextBox>
-        </div>
-    </form>
-</body>
+<p>Zonder rechten ga je geen toegang hebben bij alle gedeeltes van deze Pagina</p>
+
+<p> Lot Series/Users/Roles/ zijn alleen voor de SuperAdmin (website gaat niet werken als je er op klikt omdat je geen rechten heb)</p>
+
+<button class="nav-item">
+        <a class="nav-link text-black" asp-controller="Account" asp-action="Login">Aanmelden</a>
+    </button>
+
+
+
+
 
 
 
