--- a/ALPHA-DGS/Views/Roles/Index.cshtml
+++ b/ALPHA-DGS/Views/Roles/Index.cshtml
@@ -6,7 +6,7 @@
         <h2 class="text-primary">Roles List </h2>
     </div>
     <div class="col-6 text-right">
-        <a asp-action="Upsert" asp-controller="Roles" class="btn btn-primary">Create New Role</a>
+        <a asp-action="Upsert" asp-controller="Roles" class="btn btn-primary">Voeg Nieuwe Role</a>
     </div>
 </div>
 <div class="p-4 border rounded">
@@ -18,7 +18,7 @@
                     ID
                 </th>
                 <th>
-                    Name
+                    Naam
                 </th>
                 <th></th>
             </tr>
@@ -35,12 +35,12 @@
                         <div class="text-center">
                             <form asp-action="Delete" asp-route-id="@item.Id">
                                 <a asp-action="Upsert" asp-route-id="@item.Id" class="btn btn-info text-white" style="cursor:pointer">
-                                    Edit
+                                    Bewerk
                                 </a>
 
                                 <button type="submit" onclick="return confirm('Are you sure you want to delete this?')"
                                         class="btn btn-danger">
-                                    DELETE
+                                    VERWIJDER
                                 </button>
                             </form>
                         </div>
