--- a/ALPHA-DGS/Views/User/Index.cshtml
+++ b/ALPHA-DGS/Views/User/Index.cshtml
@@ -15,10 +15,10 @@
                             Email
                         </th>
                         <th>
-                            Name
+                            Naam
                         </th>
                         <th>
-                            Roles
+                            Role
                         </th>
                         <th></th>
                     </tr>
@@ -37,7 +37,7 @@
                                 <div class="text-center">
                                     <form asp-action="Delete" asp-route-userId="@item.Id">
                                         <a asp-action="Edit" asp-route-userId="@item.Id" class="btn btn-info text-white" style="cursor:pointer">
-                                            Edit
+                                            Bewerk
                                         </a>
 
                                         <a asp-action="ManageUserClaims" asp-route-userId="@item.Id" class="btn btn-primary text-white"
@@ -45,7 +45,7 @@
 
                                         <button type="submit" onclick="return confirm('Are you sure you want to delete this?')"
                                                 class="btn btn-danger">
-                                            DELETE
+                                            VERWIJDER
                                         </button>
                                     </form>
                                 </div>
