--- a/ALPHA-DGS/Views/Magazijns/Index.cshtml
+++ b/ALPHA-DGS/Views/Magazijns/Index.cshtml
@@ -53,7 +53,7 @@
 </style>
 
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Voeg Nieuwe Locatie</a>
 </p>
 <table class="table">
     <thead>
@@ -87,9 +87,9 @@
             </td>
             
             <td>
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Bewerk</a> |
+                <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">Info</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
             </td>
 
         </tr>
