--- a/ALPHA-DGS/Views/Magazijns/IndexMagazijn.cshtml
+++ b/ALPHA-DGS/Views/Magazijns/IndexMagazijn.cshtml
@@ -5,8 +5,8 @@
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
-            <th>Location</th>
-            <th>Used/Size</th>
+            <th>Locatie</th>
+            <th>Ingevuld/Limiet (Size)</th>
         </tr>
     </thead>
     <tbody>
