--- a/ALPHA-DGS/Views/Stadia/Index.cshtml
+++ b/ALPHA-DGS/Views/Stadia/Index.cshtml
@@ -54,7 +54,7 @@
 </style>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Voeg Nieuwe Stadia</a>
     
 </p>
 <table class="table">
@@ -79,9 +79,9 @@
                 @Html.DisplayFor(modelItem => item.Omschrijving)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Bewerk</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Info</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
             </td>
         </tr>
 }
