--- a/ALPHA-DGS/Views/MagazijnPartijs/IndexHEFTRUCK.cshtml
+++ b/ALPHA-DGS/Views/MagazijnPartijs/IndexHEFTRUCK.cshtml
@@ -140,7 +140,7 @@
                 <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addMagazijn" data-url="@Url.Action($"Details2/{item.MagazijnId}")"> Toon Magazijn</button>
             </td>
             <td>
-                <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addMagazijnPartij" data-url="@Url.Action($"Edit/{item.Id}")"> Ophalen</button>
+                <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addMagazijnPartij" data-url="@Url.Action($"Edit/{item.Id}")"> Wegzetten</button>
             </td>
 
 
