--- a/ALPHA-DGS/Views/Magazijns/IndexMagazijn.cshtml
+++ b/ALPHA-DGS/Views/Magazijns/IndexMagazijn.cshtml
@@ -6,7 +6,7 @@
     <thead>
         <tr>
             <th>Locatie</th>
-            <th>Ingevuld/Limiet (Size)</th>
+            <th>Magazijn Ruimte</th>
         </tr>
     </thead>
     <tbody>
