--- a/ALPHA-DGS/Views/Partijseries/IndexMore.cshtml
+++ b/ALPHA-DGS/Views/Partijseries/IndexMore.cshtml
@@ -117,10 +117,10 @@
                 @Html.DisplayFor(modelItem => item.PsHerk)
             </td>
             <td>
-               <a asp-action="Edit" asp-route-id="@item.PserId">Edit</a>
+               <a asp-action="Edit" asp-route-id="@item.PserId">Bewerk</a>
             </td>
             <td>
-                <a asp-action="Delete" asp-route-id="@item.PserId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.PserId">Verwijder</a>
             </td>
 
 
