--- a/ALPHA-DGS/Views/Account/Login.cshtml
+++ b/ALPHA-DGS/Views/Account/Login.cshtml
@@ -23,46 +23,6 @@
 </head>
 
 
-<h1 class="text-info">Log in</h1>
-<div class="row">
-    <div class="col-md-8">
-        <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" role="form">
-            <h4>Use a local account to log in.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="col-md-2"></label>
-                <div class="col-md-10">
-                    <input asp-for="Email" class="form-control" />
-                    <asp:TextBox ID="keyboard" runat="server" MaxLength="4"></asp:TextBox>
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="col-md-2"></label>
-                <div class="col-md-10">
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class=" col-md-10">
-                    <div class="custom-checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-2">
-                    <button type="submit" class="btn btn-success form-control">Log in</button>
-                </div>
-            </div>
-        </form>
-    </div>
     @{
         var schemes = await signInManager.GetExternalAuthenticationSchemesAsync();
         var loginProivders = schemes.ToList();
@@ -71,7 +31,7 @@
     {
         <div class="col-md-4">
             <section>
-                <h4>Lon in via DGS email</h4>
+                <h4>Log in via DGS email</h4>
                 <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" role="form">
                     <div>
                         <p>
